--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,49 +1,70 @@
 <?xml version="1.0" encoding="utf-8"?>
+<!--
+    이 레이아웃은 Unity 런타임을 호스팅할 수 있는 콘텐어와
+    두 개의 제어 버튼을 갖아추 기본 UI를 정의합니다. 버튼들은
+    호주이프 퓪스전에 위치하여 Unity가 실행 중일 때도 표시됩니다.
+    아래에서는 ConstraintLayout을 사용하여 Unity 콘텐어와 오버레이
+    컨포넌트들을 배치합니다.
+-->
 <androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
+    <!-- UnityPlayer가 추가될 콘텐어입니다. ConstraintLayout에서
+         부모의 네 모서리에 제장되어 화면 전체를 채워넣습니다. -->
+    <FrameLayout
+        android:id="@+id/unityContainer"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <!-- Unity 실행 버튼. 호주이프 퓪스전의 왼쪽에 위치합니다. -->
     <Button
         android:id="@+id/btnStartUnity"
-        android:layout_width="0dp"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Unity 실행"
+        android:layout_margin="8dp"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_margin="16dp"/>
+        app:layout_constraintStart_toStartOf="parent" />
 
+    <!-- Unity 종료 버튼. 호주이프 퓪스전의 오른쪽에 위치합니다. -->
     <Button
-        android:id="@+id/btnSendToUnity"
-        android:layout_width="0dp"
+        android:id="@+id/btnExitUnity"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Unity로 메시지 보내기"
-        app:layout_constraintTop_toBottomOf="@id/btnStartUnity"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_margin="16dp"/>
+        android:text="Unity 종료"
+        android:layout_margin="8dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
+    <!-- Unity과 상행작을 할 수 있는 슬라이더. 버튼 아래에 위치하며 Unity
+         실행 여부와 관계없이 표시됩니다.  -->
     <SeekBar
         android:id="@+id/seekScale"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:max="100"
         android:progress="50"
-        app:layout_constraintTop_toBottomOf="@id/btnSendToUnity"
+        android:layout_margin="8dp"
+        app:layout_constraintTop_toBottomOf="@id/btnStartUnity"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_margin="16dp"/>
+        app:layout_constraintEnd_toEndOf="parent" />
 
+    <!-- 상태 표시 텍스트. SeekBar 아래에 위치합니다. -->
     <TextView
         android:id="@+id/textStatus"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:text="상태: 대기중"
+        android:layout_margin="8dp"
         app:layout_constraintTop_toBottomOf="@id/seekScale"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        android:layout_margin="16dp"/>
+        app:layout_constraintEnd_toEndOf="parent" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
